product text overlapping in mobile view issue solved

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,6 +36,7 @@
     border-radius: 10px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    z-index: 2;
 }
 
 .show-navbar {
